Fix: change some function calls to be compliant with API level 19.